# whats-the-chance-game

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  CURSOR_RULES.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT.md  DOCKER_SETUP.md  Dockerfile.frontend  Dockerfile.frontend.dev  FIREBASE_FREE_TIER_GUIDE.md  FIREBASE_PRODUCTION_SETUP.md  FIREBASE_SETUP.md  FIREBASE_SETUP_COMPLETE.md  Makefile  README.md  SENIOR_REVIEW.md  SRD.md  TASKS.md  dev-container.sh  docker-compose.dev.yml  docker-compose.yml  env.example  eslint.config.js  firestore.indexes.json  firestore.rules  index.html  manual-test-bug49.js  package-lock.json  package.json  phase-0-test.md  playwright.config.ts  setup-firebase.sh  tailwind.config.ts  test-branch-protection.txt  tsconfig.json  update_env.py  vite.config.ts  vitest.config.ts
.cursor/rules/: backend-api.mdc  conversation-logging.mdc  frontend-components.mdc  git-workflow.mdc  github-issue-tracking.mdc  project-structure.mdc  tdd-approach.mdc
.githooks/: pre-commit
.github/workflows/: README.md  backend-unit-tests.yml  ci.yml  deploy-pages.yml  deploy.yml  e2e-tests.yml  frontend-unit-tests.yml  integration-tests.yml  main-testing-workflow.yml  security-audit-tests.yml
.husky/: pre-commit
backend/: .env.test  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  TEST_CHALLENGES.md  TEST_USERS.md  create_test_challenges.py  create_test_challenges_api.py  db.py  entrypoint.sh  env.example  import_test_challenges.py  main.py  migrate_unique_ids.py  pyproject.toml  pytest.ini  requirements.txt  standardize_user_schema.py  standardize_users_final.py  test_challenges_data.json  test_firebase_setup.py
backend/app/: __init__.py
backend/app/core/: __init__.py  auth.py  config.py
backend/app/models/: __init__.py
backend/app/routers/: __init__.py  challenges.py  friends.py  game_stats.py  notifications.py  users.py  websocket.py
backend/app/schemas/: __init__.py  challenge.py  friends.py  game_stats.py  notification.py  user.py
backend/app/services/: __init__.py  firebase_service.py  friends_service.py  game_stats_service.py  redis_service.py  unique_id_service.py
backend/models/: user.py
backend/routers/: user.py
backend/schemas/: user.py
backend/services/: user.py
backend/tests/: conftest.py
backend/tests/unit/: test_challenge_validation.py  test_firebase_service.py  test_friend_id_api.py  test_game_stats.py  test_models.py  test_users_api.py
documentation/: CHANGELOG.md  DEVELOPMENT.md  SRD.md  STP.md  TASKS.md  VERSIONING.md  team.md
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/test/: widget_test.dart
public/: firebase-messaging-sw.js
scripts/: dev.sh
src/: App.tsx  index.css
src/components/: ChallengeCard.tsx  ChallengeDetail.tsx  CreateChallengeModal.tsx  EmptyState.tsx  ErrorState.tsx  LoadingState.tsx  NavBar.test.tsx  NavBar.tsx  Sidebar.tsx  ThemeToggle.tsx
src/components/__tests__/: ChallengeCard.test.tsx
src/components/auth/: AuthModal.tsx  LoginForm.tsx  ProtectedRoute.tsx  PublicRoute.tsx  SignUpForm.tsx  index.ts
src/components/friends/: AddFriendButton.tsx  AddFriendModal.tsx
src/components/profile/: FriendIdDisplay.tsx  QRCodeDisplay.tsx  QRCodeScanner.tsx  (+2 more)
src/contexts/: NotificationContext.tsx  ThemeContext.tsx
src/data/: mockData.ts
src/hooks/: useAuth.tsx  useDebounce.ts  useFriendId.ts  useFriendsApi.ts  useGame.ts  useGame.tsx  useRTL.ts  useUniqueId.ts  useUserDisplay.ts  useWebSocket.ts
src/lib/: api.ts  auth.ts  fcm.ts  firebase.ts  friendIdApiService.ts  friendsApiService.ts  gameService.ts  i18n.ts  uniqueIdApiService.ts  userLookupService.ts  websocket.ts
src/pages/: Game.tsx  Index.tsx  Landing.tsx
src/test/: game-service.test.ts  realtime.test.ts  setup.ts  vitest.d.ts
src/types/: challenge.ts  firebase.ts  friends.ts
tests/e2e/: auth.spec.ts  authentication-routing.spec.ts  challenge-lifecycle.spec.ts  error-handling.spec.ts  friend-id-workflow.spec.ts  friend-request-flow.spec.ts  friends-complete-flow.spec.ts  friends-flow.spec.ts  friends-search.spec.ts  game-flow.spec.ts  health-check.spec.ts  home.spec.ts  performance.spec.ts  storage.config.ts  ui-features.spec.ts
traefik/: traefik.yml
(+40 files in other folders)
